--- a/index.html
+++ b/index.html
@@ -4,35 +4,46 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Nexus Bots Creations</title>
+
+<!-- Favicon / Logo en la pestaña -->
+<link rel="icon" href="Nexus Bots.png" type="image/png">
+
+<!-- Fuente -->
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
 <style>
+    /* General */
     body {
         margin: 0;
         font-family: 'Roboto', sans-serif;
         background-color: #0f0f0f;
         color: #ffffff;
         scroll-behavior: smooth;
-        padding-top: 120px;
+        padding-top: 140px; /* Header fijo */
     }
 
+    /* Header */
     header {
         position: fixed;
+        top: 0;
         width: 100%;
-        background-color: #1a1a1a;
+        height: 140px;
+        background: linear-gradient(90deg, #0f0f0f, #1a1a1a);
         display: flex;
         align-items: center;
-        padding: 1rem 3rem;
+        justify-content: space-between;
+        padding: 0 3rem;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.5);
         z-index: 1000;
         border-bottom: 4px solid #00ffff;
     }
 
     header h1 {
-        font-size: 2.5rem;
+        font-size: 2.8rem;
         margin: 0;
     }
 
     nav {
-        margin-left: auto;
         display: flex;
         gap: 2rem;
     }
@@ -40,11 +51,11 @@
     nav a {
         color: #ffffff;
         text-decoration: none;
-        font-size: 1.8rem;
+        font-size: 2rem;
         font-weight: bold;
-        padding: 0.5rem 1rem;
-        border-radius: 10px;
-        transition: all 0.2s;
+        padding: 0.8rem 1.5rem;
+        border-radius: 12px;
+        transition: 0.2s;
     }
 
     nav a:hover {
@@ -52,17 +63,18 @@
         color: #0f0f0f;
     }
 
+    /* Secciones */
     section {
-        padding: 6rem 2rem 4rem;
+        padding: 8rem 2rem 5rem;
         max-width: 1200px;
         margin: auto;
-        scroll-margin-top: 120px;
+        scroll-margin-top: 140px;
     }
 
     h2 {
         color: #00ffff;
-        text-align: center;
         font-size: 3rem;
+        text-align: center;
         margin-bottom: 2rem;
     }
 
@@ -74,10 +86,10 @@
     ul li {
         background-color: #1a1a1a;
         margin: 0.8rem 0;
-        padding: 1.2rem;
-        border-left: 7px solid #00ffff;
-        border-radius: 8px;
-        font-size: 1.4rem;
+        padding: 1.5rem;
+        border-left: 8px solid #00ffff;
+        border-radius: 10px;
+        font-size: 1.5rem;
         transition: transform 0.2s;
     }
 
@@ -95,10 +107,10 @@
         color: #0f0f0f;
         text-decoration: none;
         font-weight: bold;
-        font-size: 1.8rem;
-        padding: 1.2rem 3rem;
-        border-radius: 10px;
-        transition: background-color 0.2s;
+        font-size: 2rem;
+        padding: 1.5rem 4rem;
+        border-radius: 12px;
+        transition: 0.2s;
     }
 
     .cta a:hover {
@@ -108,34 +120,40 @@
     footer {
         background-color: #1a1a1a;
         text-align: center;
-        padding: 3rem 1rem;
+        padding: 4rem 1rem;
         border-top: 4px solid #00ffff;
-        font-size: 1.2rem;
+        font-size: 1.3rem;
     }
 
     .payments {
         text-align: center;
         margin-top: 2rem;
-        font-size: 1.5rem;
+        font-size: 1.6rem;
         color: #00ffff;
     }
 
     .terms {
         background-color: #1a1a1a;
-        padding: 1rem 2rem;
-        border-radius: 8px;
-        margin-bottom: 1rem;
+        padding: 2rem;
+        border-radius: 12px;
+        margin-bottom: 2rem;
         line-height: 1.6;
-        font-size: 1.2rem;
+        font-size: 1.3rem;
     }
 
     .terms h3 {
         color: #00ffff;
-        margin-bottom: 0.5rem;
+        margin-bottom: 1rem;
     }
 
     .terms p, .terms li {
-        margin-bottom: 0.6rem;
+        margin-bottom: 0.8rem;
+    }
+
+    /* Animación al hacer hover en secciones */
+    section:hover {
+        transform: scale(1.01);
+        transition: 0.3s;
     }
 </style>
 </head>
@@ -155,7 +173,7 @@
 <!-- Inicio -->
 <section id="inicio">
     <h2>Bienvenido a Nexus Bots Creations</h2>
-    <p style="text-align:center; font-size:1.6rem;">Tu centro premium de bots, texturas y utilidades para Discord.</p>
+    <p style="text-align:center; font-size:1.7rem;">Tu centro premium de bots, texturas y utilidades para Discord.</p>
 </section>
 
 <!-- Servicios -->
@@ -182,7 +200,7 @@
         <li>🔊 Gente activa y colaboradora</li>
     </ul>
     <div class="cta">
-        <p style="font-size:1.8rem;">✨ ¡Crea algo grande con nosotros! ✨</p>
+        <p style="font-size:1.9rem;">✨ ¡Crea algo grande con nosotros! ✨</p>
         <a href="https://discord.gg/s7CtYNDbJg" target="_blank">Entrar al servidor</a>
     </div>
 </section>
@@ -190,7 +208,7 @@
 <!-- Contacto -->
 <section id="contacto">
     <h2>Contacto & Pagos</h2>
-    <p style="text-align:center; font-size:1.6rem;">Si quieres más información o comprar, nos puedes pagar mediante:</p>
+    <p style="text-align:center; font-size:1.7rem;">Si quieres más información o comprar, nos puedes pagar mediante:</p>
     <div class="payments">
         💳 PayPal <br> 🎮 Robux
     </div>
