--- a/index.html
+++ b/index.html
@@ -1,266 +1,187 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Nexus Bots Creations</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nexus Bots Creations</title>
 
-<!-- Favicon / Logo en la pestaña -->
-<link rel="icon" href="Nexus Bots.png" type="image/png">
+    <!-- Estilos básicos -->
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #0d0d0d;
+            color: #ffffff;
+        }
 
-<!-- Fuente -->
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+        header {
+            background: #111;
+            padding: 20px;
+            text-align: center;
+            border-bottom: 2px solid #0ff;
+        }
 
-<style>
-    /* General */
-    body {
-        margin: 0;
-        font-family: 'Roboto', sans-serif;
-        background-color: #0f0f0f;
-        color: #ffffff;
-        scroll-behavior: smooth;
-        padding-top: 140px; /* Header fijo */
-    }
+        header h1 {
+            margin: 0;
+            font-size: 2.5rem;
+            color: #0ff;
+        }
 
-    /* Header */
-    header {
-        position: fixed;
-        top: 0;
-        width: 100%;
-        height: 140px;
-        background: linear-gradient(90deg, #0f0f0f, #1a1a1a);
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 0 3rem;
-        box-shadow: 0 4px 10px rgba(0,0,0,0.5);
-        z-index: 1000;
-        border-bottom: 4px solid #00ffff;
-    }
+        nav {
+            text-align: center;
+            margin-top: 10px;
+        }
 
-    header h1 {
-        font-size: 2.8rem;
-        margin: 0;
-    }
+        nav a {
+            color: #0ff;
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
+        }
 
-    nav {
-        display: flex;
-        gap: 2rem;
-    }
+        section {
+            padding: 40px 20px;
+            max-width: 1000px;
+            margin: auto;
+        }
 
-    nav a {
-        color: #ffffff;
-        text-decoration: none;
-        font-size: 2rem;
-        font-weight: bold;
-        padding: 0.8rem 1.5rem;
-        border-radius: 12px;
-        transition: 0.2s;
-    }
+        .hero {
+            text-align: center;
+            padding: 80px 20px;
+            background: linear-gradient(135deg, #0ff2, #00aaff33);
+            border-bottom: 2px solid #0ff;
+        }
 
-    nav a:hover {
-        background-color: #00ffff;
-        color: #0f0f0f;
-    }
+        .hero h2 {
+            font-size: 2.2rem;
+            margin-bottom: 10px;
+        }
 
-    /* Secciones */
-    section {
-        padding: 8rem 2rem 5rem;
-        max-width: 1200px;
-        margin: auto;
-        scroll-margin-top: 140px;
-    }
+        .hero p {
+            font-size: 1.2rem;
+            opacity: 0.8;
+        }
 
-    h2 {
-        color: #00ffff;
-        font-size: 3rem;
-        text-align: center;
-        margin-bottom: 2rem;
-    }
+        .btn {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 12px 25px;
+            background: #0ff;
+            color: #000;
+            font-weight: bold;
+            border-radius: 5px;
+            text-decoration: none;
+        }
 
-    ul {
-        list-style: none;
-        padding: 0;
-    }
+        .card {
+            background: #111;
+            padding: 20px;
+            margin: 20px 0;
+            border-left: 4px solid #0ff;
+            border-radius: 5px;
+        }
 
-    ul li {
-        background-color: #1a1a1a;
-        margin: 0.8rem 0;
-        padding: 1.5rem;
-        border-left: 8px solid #00ffff;
-        border-radius: 10px;
-        font-size: 1.5rem;
-        transition: transform 0.2s;
-    }
-
-    ul li:hover {
-        transform: scale(1.02);
-    }
-
-    .cta {
-        text-align: center;
-        margin-top: 3rem;
-    }
-
-    .cta a {
-        background-color: #00ffff;
-        color: #0f0f0f;
-        text-decoration: none;
-        font-weight: bold;
-        font-size: 2rem;
-        padding: 1.5rem 4rem;
-        border-radius: 12px;
-        transition: 0.2s;
-    }
-
-    .cta a:hover {
-        background-color: #00cccc;
-    }
-
-    footer {
-        background-color: #1a1a1a;
-        text-align: center;
-        padding: 4rem 1rem;
-        border-top: 4px solid #00ffff;
-        font-size: 1.3rem;
-    }
-
-    .payments {
-        text-align: center;
-        margin-top: 2rem;
-        font-size: 1.6rem;
-        color: #00ffff;
-    }
-
-    .terms {
-        background-color: #1a1a1a;
-        padding: 2rem;
-        border-radius: 12px;
-        margin-bottom: 2rem;
-        line-height: 1.6;
-        font-size: 1.3rem;
-    }
-
-    .terms h3 {
-        color: #00ffff;
-        margin-bottom: 1rem;
-    }
-
-    .terms p, .terms li {
-        margin-bottom: 0.8rem;
-    }
-
-    /* Animación al hacer hover en secciones */
-    section:hover {
-        transform: scale(1.01);
-        transition: 0.3s;
-    }
-</style>
+        footer {
+            text-align: center;
+            padding: 20px;
+            background: #111;
+            border-top: 2px solid #0ff;
+            margin-top: 40px;
+        }
+    </style>
 </head>
+
 <body>
 
-<header>
-    <h1>Nexus Bots Creations</h1>
-    <nav>
-        <a href="#inicio">Inicio</a>
-        <a href="#servicios">Servicios</a>
-        <a href="#equipo">Equipo</a>
-        <a href="#contacto">Contacto</a>
-        <a href="#terminos">Términos</a>
-    </nav>
-</header>
+    <!-- HEADER -->
+    <header>
+        <h1>Nexus Bots Creations</h1>
+        <nav>
+            <a href="#servicios">Servicios</a>
+            <a href="#hosting">Hosting Web</a>
+            <a href="#equipo">Equipo</a>
+            <a href="#contacto">Contacto</a>
+        </nav>
+    </header>
 
-<!-- Inicio -->
-<section id="inicio">
-    <h2>Bienvenido a Nexus Bots Creations</h2>
-    <p style="text-align:center; font-size:1.7rem;">Tu centro premium de bots, texturas y utilidades para Discord.</p>
-</section>
+    <!-- HERO -->
+    <section class="hero">
+        <h2>Soluciones Premium para Discord y Hosting Web</h2>
+        <p>Innovación, calidad y soporte experto para tu comunidad o proyecto.</p>
+        <a class="btn" href="#hosting">Ver planes de hosting</a>
+    </section>
 
-<!-- Servicios -->
-<section id="servicios">
-    <h2>Servicios</h2>
-    <ul>
-        <li>⚙️ Bots exclusivos y personalizados</li>
-        <li>🎨 Texturas en alta calidad para juegos y servidores</li>
-        <li>📋 Interfaces simples, rápidas e intuitivas</li>
-        <li>🛠️ Soporte técnico personalizado y veloz</li>
-        <li>🔐 Contenido 100% original y seguro</li>
-        <li>♻️ Mejoras constantes según feedback de la comunidad</li>
-    </ul>
-</section>
+    <!-- SERVICIOS -->
+    <section id="servicios">
+        <h2>¿Qué ofrecemos?</h2>
 
-<!-- Equipo -->
-<section id="equipo">
-    <h2>Únete al equipo</h2>
-    <ul>
-        <li>🛡️ Moderadores responsables</li>
-        <li>🧑‍🎨 Diseñadores creativos</li>
-        <li>💻 Programadores de confianza</li>
-        <li>🧪 Testers con ganas de aportar</li>
-        <li>🔊 Gente activa y colaboradora</li>
-    </ul>
-    <div class="cta">
-        <p style="font-size:1.9rem;">✨ ¡Crea algo grande con nosotros! ✨</p>
-        <a href="https://discord.gg/s7CtYNDbJg" target="_blank">Entrar al servidor</a>
-    </div>
-</section>
+        <div class="card">
+            <h3>⚙️ Bots personalizados</h3>
+            <p>Automatizaciones avanzadas, paneles intuitivos y lógica profesional.</p>
+        </div>
 
-<!-- Contacto -->
-<section id="contacto">
-    <h2>Contacto & Pagos</h2>
-    <p style="text-align:center; font-size:1.7rem;">Si quieres más información o comprar, nos puedes pagar mediante:</p>
-    <div class="payments">
-        💳 PayPal <br> 🎮 Robux
-    </div>
-    <div class="cta">
-        <a href="https://discord.gg/s7CtYNDbJg" target="_blank">Discord Nexus Bots Creations</a>
-    </div>
-</section>
+        <div class="card">
+            <h3>🎨 Texturas y recursos</h3>
+            <p>Material original y optimizado para servidores y juegos.</p>
+        </div>
 
-<!-- Términos y Condiciones -->
-<section id="terminos">
-    <h2>Términos y Condiciones & Política de Privacidad</h2>
+        <div class="card">
+            <h3>📋 Interfaces y paneles</h3>
+            <p>Diseños rápidos, intuitivos y con estética premium.</p>
+        </div>
 
-    <div class="terms">
-        <h3>🧾 TÉRMINOS Y CONDICIONES – NEXUS BOTS CREATIVOS</h3>
-        <p><strong>Actualizado el 22/06/2025</strong></p>
-        <ol>
-            <li><strong>¿Qué vendemos?</strong> Solo vendemos bots y texturas digitales.</li>
-            <li><strong>¿Cómo se entregan?</strong>
-                <ul>
-                    <li>Bots: Te enviamos un enlace privado para añadirlo.</li>
-                    <li>Texturas: Te enviamos los IDs por MD en Discord después del pago.</li>
-                </ul>
-            </li>
-            <li><strong>¿Cómo se paga?</strong> Solo aceptamos PayPal o Robux. Se paga antes de entregar el producto.</li>
-            <li><strong>Propiedad y Derechos de Autor</strong> Todo lo que vendemos es creación de Nexus Bots Creativos. Tienes permiso para usarlo, pero no para revenderlo, modificarlo ni compartirlo. Está protegido por derechos de autor.</li>
-            <li><strong>¿Hay reembolsos?</strong> No. Al ser productos digitales, no hay reembolsos, salvo fallo grave comprobado.</li>
-            <li><strong>¿Hay soporte?</strong> Sí. Ofrecemos soporte por Discord durante 7 días después de tu compra.</li>
-        </ol>
-    </div>
+        <div class="card">
+            <h3>🛠️ Soporte técnico</h3>
+            <p>Atención directa, rápida y profesional.</p>
+        </div>
+    </section>
 
-    <div class="terms">
-        <h3>🔐 POLÍTICA DE PRIVACIDAD – NEXUS BOTS CREATIVOS</h3>
-        <p><strong>¿Qué datos usamos?</strong></p>
-        <ul>
-            <li>Tu nombre de usuario en Discord</li>
-            <li>Lo que compraste</li>
-            <li>Comprobante de pago (si es necesario)</li>
-        </ul>
-        <p><strong>¿Para qué usamos esos datos?</strong></p>
-        <ul>
-            <li>Para confirmar tu compra</li>
-            <li>Enviarte el producto</li>
-            <li>Darte soporte</li>
-        </ul>
-        <p>Nunca compartimos ni vendemos tus datos.</p>
-        <p>¿Puedes pedir que borremos tus datos? Sí, solo tienes que escribirnos por MD.</p>
-    </div>
-</section>
+    <!-- HOSTING -->
+    <section id="hosting">
+        <h2>Planes de Hosting Web</h2>
 
-<footer>
-    <p>Donde la innovación y la calidad se encuentran. No es solo una tienda... ¡es una comunidad!</p>
-</footer>
+        <div class="card">
+            <h3>Nexus Basic</h3>
+            <p>2 GB almacenamiento • 1 dominio • SSL • FTP</p>
+        </div>
+
+        <div class="card">
+            <h3>Nexus Advanced</h3>
+            <p>5 GB almacenamiento • 3 dominios • SSL • FTP</p>
+        </div>
+
+        <div class="card">
+            <h3>Nexus Premium</h3>
+            <p>10 GB almacenamiento • ilimitado • SSL • FTP</p>
+        </div>
+
+        <a class="btn" href="#contacto">Solicitar Hosting</a>
+    </section>
+
+    <!-- EQUIPO -->
+    <section id="equipo">
+        <h2>¿Quieres formar parte del equipo?</h2>
+
+        <div class="card">
+            <p>🛡️ Moderadores responsables</p>
+            <p>🧑‍🎨 Diseñadores creativos</p>
+            <p>💻 Programadores de confianza</p>
+            <p>🧪 Testers detallistas</p>
+            <p>🔊 Gente activa y colaboradora</p>
+        </div>
+    </section>
+
+    <!-- CONTACTO -->
+    <section id="contacto">
+        <h2>Contacto</h2>
+        <p>Correo: contacto@nexusbotscreations.com</p>
+        <p>Discord: Tu servidor oficial</p>
+    </section>
+
+    <!-- FOOTER -->
+    <footer>
+        © 2025 Nexus Bots Creations — Innovación y calidad
+    </footer>
 
 </body>
 </html>
