--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nexus Bots Creations</title>
+    <link rel="icon" href="Nexus Bots.png" type="image/png">
 
     <!-- Estilos básicos -->
     <style>
