--- a/panel.html
+++ b/panel.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panel del Cliente - Nexus Bots Creations</title>
+    <link rel="icon" href="Nexus Bots.png" type="image/png">
+
 
     <style>
         /* RESET */
