--- a/panel.html
+++ b/panel.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panel del Cliente - Nexus Bots Creations</title>
-    <link rel="icon" href="Nexus Bots.png" type="image/png">
-
 
     <style>
         /* RESET */
@@ -17,16 +15,16 @@
 
         body {
             font-family: Arial, sans-serif;
-            background-color: #0d0d0d;
-            color: #fff;
+            background-color: #050609;
+            color: #ffffff;
             overflow-x: hidden;
         }
 
-        /* ANIMACIONES */
+        /* ANIMACIÓN */
         .fade-in {
             opacity: 0;
             transform: translateY(20px);
-            animation: fadeIn 1s forwards;
+            animation: fadeIn 0.9s forwards;
         }
 
         @keyframes fadeIn {
@@ -38,135 +36,149 @@
 
         /* HEADER */
         header {
-            background: #111;
-            padding: 20px;
-            text-align: center;
-            border-bottom: 2px solid #0ff;
+            background: #080910;
+            padding: 15px 20px;
+            border-bottom: 2px solid #00f5ff;
             position: sticky;
             top: 0;
-            z-index: 100;
+            z-index: 10;
+            text-align: center;
         }
 
         header h1 {
-            color: #0ff;
-            font-size: 2.2rem;
+            color: #00f5ff;
+            font-size: 1.8rem;
+        }
+
+        nav {
+            margin-top: 8px;
         }
 
         nav a {
-            color: #0ff;
-            margin: 0 15px;
+            color: #00f5ff;
+            margin: 0 10px;
             text-decoration: none;
+            font-size: 0.9rem;
             font-weight: bold;
-            transition: 0.3s;
         }
 
         nav a:hover {
-            color: #fff;
+            color: #ffffff;
         }
 
         /* CONTENIDO */
         section {
-            padding: 60px 20px;
-            max-width: 900px;
-            margin: auto;
+            padding: 70px 20px;
+            max-width: 700px;
+            margin: 0 auto;
         }
 
         h2 {
             text-align: center;
-            margin-bottom: 20px;
-            color: #0ff;
+            margin-bottom: 15px;
+            color: #00f5ff;
         }
 
         p {
             text-align: center;
-            opacity: 0.8;
-            margin-bottom: 30px;
+            opacity: 0.85;
+            font-size: 0.95rem;
+            margin-bottom: 25px;
         }
 
         .panel-box {
-            background: #111;
-            padding: 30px;
-            border: 2px solid #0ff;
+            background: #080910;
             border-radius: 10px;
+            padding: 25px;
+            border: 2px solid #00f5ff44;
             text-align: center;
-            transition: 0.3s;
+            box-shadow: 0 0 20px #00f5ff22;
         }
 
-        .panel-box:hover {
-            transform: scale(1.03);
-            background: #0ff2;
+        .panel-box p {
+            margin-bottom: 10px;
         }
 
         .btn {
             display: inline-block;
-            margin-top: 20px;
+            margin-top: 15px;
             padding: 12px 25px;
-            background: #0ff;
-            color: #000;
+            background: #00f5ff;
+            color: #050609;
             font-weight: bold;
             border-radius: 5px;
             text-decoration: none;
             transition: 0.3s;
+            font-size: 0.95rem;
         }
 
         .btn:hover {
-            background: #fff;
+            background: #ffffff;
+        }
+
+        .note {
+            font-size: 0.8rem;
+            opacity: 0.7;
+            margin-top: 10px;
         }
 
         /* FOOTER */
         footer {
             text-align: center;
-            padding: 20px;
-            background: #111;
-            border-top: 2px solid #0ff;
+            padding: 18px 10px;
+            background: #080910;
+            border-top: 2px solid #00f5ff22;
+            font-size: 0.8rem;
+            opacity: 0.75;
             margin-top: 40px;
         }
 
-        /* RESPONSIVE */
-        @media (max-width: 768px) {
+        @media (max-width: 600px) {
             header h1 {
-                font-size: 1.7rem;
+                font-size: 1.5rem;
             }
 
-            .panel-box {
-                padding: 20px;
+            section {
+                padding: 55px 15px;
             }
         }
     </style>
 </head>
-
 <body>
 
-    <!-- HEADER -->
     <header class="fade-in">
         <h1>Nexus Bots Creations</h1>
         <nav>
-            <a href="index.html">Inicio</a>
+            <a href="index.html#inicio">Inicio</a>
             <a href="index.html#hosting">Hosting</a>
             <a href="panel.html">Panel</a>
             <a href="index.html#contacto">Contacto</a>
         </nav>
     </header>
 
-    <!-- PANEL -->
     <section class="fade-in">
         <h2>Panel del Cliente</h2>
-        <p>Accede a tu panel de hosting para gestionar tu web, dominios, bases de datos y más.</p>
+        <p>
+            Desde aquí accedes a tu panel HestiaCP para gestionar tu hosting web, dominios, bases de datos y más.
+        </p>
 
         <div class="panel-box">
-            <h3 style="color:#0ff; margin-bottom:10px;">Acceso al Panel de Hosting</h3>
-            <p>Haz clic en el botón para entrar en tu panel HestiaCP.</p>
+            <p><strong>Acceso al Panel de Hosting</strong></p>
+            <p>Haz clic en el botón para entrar en tu panel.</p>
 
-            <!-- ENLACE A TU PANEL HESTIA -->
+            <!-- CAMBIA ESTA URL POR TU PANEL REAL DE HESTIA -->
             <a class="btn" href="https://panel.tudominio.com:8083" target="_blank">
-                Entrar al Panel
+                Entrar al Panel HestiaCP
             </a>
+
+            <p class="note">
+                Si tienes problemas de acceso, revisa tus credenciales o contacta con soporte de Nexus Bots Creations.
+            </p>
         </div>
     </section>
 
-    <!-- FOOTER -->
     <footer>
-        © 2025 Nexus Bots Creations — Innovación y calidad
+        © 2025 Nexus Bots Creations — Panel del cliente
     </footer>
 
 </body>
